// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCollapse customize 1`] = `
<div>
  <div
    class="bazinga collapse"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCollapse component 1`] = `
<div>
  <div
    class="collapse"
  >
    Test
  </div>
</div>
`;
